DDA2-68: Implementación de endpoints para cierre y reapertura de tickets.
